[package]
name = "template_crate"
version = "0.0.0"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Description goes here!!
"""
repository = "https://github.com/steffahn/template_crate"
homepage = "https://github.com/steffahn/template_crate"
documentation = "https://docs.rs/template_crate"
keywords = []
categories = ["no-std"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
